--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,64 +7,59 @@
     android:background="@color/PrimaryBackground"
     tools:context=".Other.LoginActivity">
 
+    <TextView
+        android:id="@+id/appTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="60dp"
+        android:paddingBottom="60dp"
+        android:text="@string/app_name"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="32sp" />
+
     <LinearLayout
+        android:id="@+id/linear"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="60dp"
+        android:layout_below="@id/appTitle">
 
-        <TextView
-            android:id="@+id/textView3"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/login_email_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:hint="@string/login_email"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="@string/app_name"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="32sp" />
+            android:layout_marginTop="80dp" >
 
-        <EditText
-            android:id="@+id/login_email_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:backgroundTint="@color/white"
-            android:gravity="center_horizontal"
-            android:hint="@string/login_email"
-            android:inputType="textEmailAddress"
-            android:textAlignment="viewStart"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            tools:ignore="RtlCompat" />
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/login_password_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:hint="@string/login_password"
+                android:inputType="textPassword"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
 
-        <EditText
-            android:id="@+id/login_password_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:backgroundTint="@color/white"
-            android:gravity="center_horizontal"
-            android:hint="@string/login_password"
-            android:inputType="textPassword"
-            android:textAlignment="viewStart"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            tools:ignore="RtlCompat" />
-
-        <Button
-            android:id="@+id/login_button"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="100dp"
-            android:background="@drawable/button_accessory"
-            android:text="@string/login_btn"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+        </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
 
@@ -73,12 +68,24 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_above="@id/no_account_text"
+        android:layout_above="@+id/login_button"
         android:layout_centerHorizontal="true"
         android:visibility="gone"
+        android:layout_marginBottom="70dp"
         android:gravity="center_horizontal" />
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/button_accessory"
+        android:text="@string/login_btn"
+        android:textAllCaps="false"
+        android:layout_above="@id/no_account_text"
+        android:layout_marginBottom="60dp"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/no_account_text"
