--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -72,6 +72,7 @@
             android:paddingBottom="10dp"/>
 
         <LinearLayout
+            android:id="@+id/content_parent"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -107,7 +108,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
-                android:inputType="textCapSentences|textMultiLine"
                 android:gravity="top"
                 android:hint="New message..."
                 android:maxLength="300"
@@ -141,16 +141,25 @@
 <!--            android:textColor="@color/white"-->
 <!--            android:text="Location"/>-->
 
-        <TextView
-            android:id="@+id/post_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/ic_time_white"
-            android:layout_marginStart="60dp"
-            android:drawableTint="@color/white"
-            android:background="@color/PrimaryBackground"
-            android:textColor="@color/white"
-            android:text="Time"/>
+<!--        <TextView-->
+<!--            android:id="@+id/post_time"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:drawableTop="@drawable/ic_time_white"-->
+<!--            android:layout_marginStart="60dp"-->
+<!--            android:drawableTint="@color/white"-->
+<!--            android:background="@color/PrimaryBackground"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:text="Time"/>-->
+
+        <ImageView
+            android:id="@+id/add_media"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/ic_add"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="15dp"/>
+
 
         <ImageView
             android:id="@+id/post_send"
