--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -55,14 +55,14 @@
             android:id="@+id/relLayout2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/PrimaryBackground2"
             android:layout_below="@id/appBar">
 
             <RelativeLayout
                 android:id="@+id/no_notifications"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone"
-                android:background="@color/PrimaryBackground">
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -77,8 +77,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/notificationRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/PrimaryBackground2">
+                android:layout_height="match_parent">
 
             </android.support.v7.widget.RecyclerView>
 
