--- a/app/src/main/res/layout/activity_players.xml
+++ b/app/src/main/res/layout/activity_players.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/players_activity"
     android:layout_width="match_parent"
@@ -13,10 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/PrimaryBackground">
+            android:background="@color/PrimaryBackground2"
+            android:orientation="vertical">
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/appBar"
@@ -29,124 +29,190 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_width="wrap_content"
+                        <EditText
+                            android:id="@+id/search_field"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentTop="true"
                             android:paddingStart="30dp"
                             android:paddingEnd="0dp"
+                            android:layout_weight="1"
                             android:text="Players"
+                            android:hint="Search friends..."
+                            android:enabled="false"
+                            android:imeOptions="actionSearch"
+                            android:inputType="textCapWords"
+                            android:backgroundTint="@color/PrimaryBackground"
                             android:textColor="@color/white"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
-                    </RelativeLayout>
+                        <ImageView
+                            android:id="@+id/search_button"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginEnd="30dp"
+                            android:src="@drawable/ic_search_light"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
 
                 </android.support.v7.widget.Toolbar>
 
             </android.support.design.widget.AppBarLayout>
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/cardView"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/no_search_results"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/appBar"
-                android:layout_margin="3dp">
+                android:text="No results were found."
+                android:gravity="center"
+                android:visibility="gone"
+                android:layout_gravity="center"
+                android:layout_margin="60dp"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/search_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                android:background="@color/PrimaryBackground2"/>
+
+            <RelativeLayout
+                android:id="@+id/primary_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/PrimaryBackground2">
 
                 <LinearLayout
-                    android:orientation="horizontal"
+                    android:id="@+id/topLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/accessory_full_border"
-                    android:padding="20dp">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@drawable/accessory_dark_fade_vertical" >
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/my_squad"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@drawable/accessory_full_border_green_and_black">
+
+                        <RelativeLayout
+                            android:id="@+id/members_rel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/button_accessory">
+
+                            <TextView
+                                android:id="@+id/squad_card_title"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="My Squad"
+                                android:paddingStart="15dp"
+                                android:paddingEnd="15dp"
+                                android:layout_centerVertical="true"
+                                android:layout_margin="5dp"
+                                android:textStyle="bold"
+                                android:textColor="@color/white"/>
+
+                            <ImageView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_alignParentEnd="true"
+                                android:src="@drawable/ic_extend"/>
+
+                        </RelativeLayout>
+
+                    </android.support.v7.widget.CardView>
 
                     <TextView
-                        android:id="@+id/textView18"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/num_friends"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="9"
-                        android:text="No Players"
-                        android:layout_gravity="center"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
+                        android:background="@drawable/transparent_bottom_border"
+                        android:text="Friends"
+                        android:padding="15dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/quantum_grey"/>
 
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/floatingActionButton"
-                        android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/no_players"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        app:srcCompat="@mipmap/add_player"
-                        android:focusable="true" />
+                        android:visibility="gone"
+                        android:text="Find and add your friends by clicking the '+' icon below"
+                        android:textSize="16sp"
+                        android:layout_marginTop="50dp"
+                        android:paddingStart="60dp"
+                        android:paddingEnd="60dp"
+                        android:textAlignment="center"
+                        android:gravity="center" />
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/cardView"
-                android:background="@color/PrimaryBackground">
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/relLay1"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginEnd="30dp"
-                    android:layout_marginTop="10dp">
-
-                    <android.support.design.widget.CoordinatorLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/accessory_full_border_transparent">
-
-                        <android.support.design.widget.TabLayout
-                            android:id="@+id/tabs"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:tabTextColor="@color/white"
-                            app:tabSelectedTextColor="@color/colorPrimary">
-
-                        </android.support.design.widget.TabLayout>
-
-                    </android.support.design.widget.CoordinatorLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <RelativeLayout
-                    android:id="@+id/relLay"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_below="@id/relLay1"
-                    android:layout_marginTop="5dp"
+                    android:layout_below="@+id/topLayout"
                     android:layout_marginBottom="56dp">
 
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/player_viewpager_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true">
+                </android.support.v7.widget.RecyclerView>
 
-                    </android.support.v4.view.ViewPager>
+                <com.github.clans.fab.FloatingActionMenu
+                    android:id="@+id/fab_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:menu_colorNormal="@color/colorPrimary"
+                    app:menu_colorPressed="@color/colorPrimary"
+                    app:menu_labels_colorNormal="@color/grey"
+                    app:menu_labels_padding="10dp"
+                    android:layout_marginBottom="76dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true" >
+
+                    <com.github.clans.fab.FloatingActionButton
+                        android:id="@+id/search_player_fab"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:fab_colorNormal="@color/colorPrimary"
+                        app:fab_colorPressed="@color/colorPrimary"
+                        app:fab_label="Search All Players"
+                        app:fab_size="mini"
+                        android:src="@drawable/ic_search_light"/>
+
+                    <com.github.clans.fab.FloatingActionButton
+                        android:id="@+id/create_player_fab"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:fab_colorNormal="@color/colorPrimary"
+                        app:fab_colorPressed="@color/colorPrimary"
+                        app:fab_label="Create New Player"
+                        app:fab_size="mini"
+                        android:src="@drawable/ic_player_add_white"/>
+
+                </com.github.clans.fab.FloatingActionMenu>
+
+                <RelativeLayout
+                    android:id="@+id/bottom_nav"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <include layout="@layout/layout_bottom_nav_view"/>
 
                 </RelativeLayout>
 
             </RelativeLayout>
 
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <include layout="@layout/layout_bottom_nav_view"/>
-        </RelativeLayout>
+        </LinearLayout>
 
     </FrameLayout>
 
