--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -166,7 +166,7 @@
                                 android:id="@+id/friends_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Freinds"
+                                android:text="Friends"
                                 android:paddingBottom="3dp"
                                 android:textAlignment="center"
                                 android:textStyle="bold"
